fixed a couple of broken links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -71,7 +71,7 @@
     <div class="footer-content">
         <div class="footer-disclaimer">
             <p>
-                Copyright &copy; 2016 The Visualization Design Lab. All content on this website is licensed under
+                Copyright &copy; 2016-2018 The Visualization Design Lab. All content on this website is licensed under
                 the <br/>
                 <a href="http://creativecommons.org/licenses/by/4.0/legalcode">Creative Commons Attribution license
                     (CC BY)</a>. Copyright of the linked publications is with the publishers. Logo by <a
