restricted recent publications to papers only

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,8 +10,8 @@
     [
     {% for publication in site.publications %}
 
-    {% if publication.personal %}
-    {% elsif publication.image_large %}
+    {% if publication.personal  %}
+    {% elsif publication.image_large%}
     {
     "title"    : "{{ publication.title }}",
     "shortname" : "{{ publication.shortname }}",
@@ -74,7 +74,7 @@
               {% assign sorted_publications = site.publications | sort: 'year' %}
             {% for publication in sorted_publications reversed %}
             {% if publication.personal %}
-	          {% elsif publication.year > 2015 %}
+	          {% elsif publication.year > 2015 and publication.type == "paper" %}
             <li>
               <div style="padding-right: 1.5em;"><a href="{{ site.baseurl }}{{ publication.url }}">{{ publication.title }}</a></div>
               <div style="margin-bottom: 5px;">
