added preprint server as a field in publications, updated lineage, taggle and KDE paper

--- a/_layouts/publication.html
+++ b/_layouts/publication.html
@@ -164,7 +164,13 @@ layout: default
     </li>
 	{% endfor %}
     {% endif %}
-      
+
+    {% if page.preprint_server %}
+    <li>
+      <i class="fa fa-external-link"></i> &nbsp;<a href="{{ page.preprint_server }}">Preprint Server</a>
+    </li>
+    {% endif %}
+
     {% if page.code %}
     <li>
       <i class="fa  fa-code-fork"></i> &nbsp;<a href="{{ page.code }}">Source Code</a>
