--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -93,7 +93,10 @@
 	          {% endfor %}
 	      </ul>
 
-         <a class="twitter-timeline" data-lang="en" data-dnt="true" data-link-color="#3376A0" href="https://twitter.com/visdesignlab?ref_src=twsrc%5Etfw">Tweets by visdesignlab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      <h1>Twitter</h1>
+
+         <a class="twitter-timeline" data-lang="en" data-dnt="true" data-link-color="#3376A0" data-chrome="noheader, noborders, transparent" data-tweet-limit="4" href="https://twitter.com/visdesignlab?ref_src=twsrc%5Etfw">Tweets by visdesignlab</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
 
 
   </article>
