--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -11,3 +11,31 @@
 <!-- Fav and touch icons -->
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico" />
 <link rel="apple-touch-icon" href="{{ site.baseurl }}/favicon.png" />
+
+{% if page.layout == "publication" %} <!-- metadata for link preview  -->
+  <!-- Schema.org markup for Google+ -->
+  <meta itemprop="name" content="{{page.title}}">
+  <meta itemprop="description" content="{{ page.abstract | strip_html }}">
+  {% if page.image_large %}
+  <meta itemprop="image" content="{{ site.url }}/assets/images/papers/{{page.image_large}}">
+  {% endif %}
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@visdesignlab">
+  <meta name="twitter:title" content="{{page.title}}">
+  <meta name="twitter:description" content="{{ page.abstract | strip_html }}">
+  <meta name="twitter:creator" content="@visdesignlab">
+  {% if page.image_large %}
+  <meta name="twitter:image:src" content="{{ site.url }}/assets/images/papers/{{page.image_large}}">
+  {% endif %}
+
+  <!-- Open Graph data -->
+  <meta property="og:title" content="{{page.title}}" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.url }}" />
+  <meta property="og:description" content="{{ page.abstract | strip_html }}" />
+  {% if page.image_large %}
+  <meta property="og:image" content="{{ site.url }}/assets/images/papers/{{page.image_large}}" />
+  {% endif %}
+{% endif %}
