--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -79,7 +79,7 @@ layout: default
       <p class="space-alumni">&nbsp;</p>
 
       <h1>PhD Graduates</h1>
-      <p class="person-list-block" id="{{ person.key }}">
+      <p class="person-list-block">
       {% for p in site.persons %}
       {% if p.graduated and p.phd_graduate %}
       {% capture name %}{{ p.first_name }} {{ p.last_name }}{% endcapture %}
@@ -93,7 +93,7 @@ layout: default
 
 
       <h1>Other Alumni</h1>
-      <p class="person-list-block" id="{{ person.key }}">
+      <p class="person-list-block">
       {% for p in site.persons %}
         {% if p.graduated %}
           {% if p.phd_graduate %}
@@ -147,3 +147,4 @@ layout: default
     }
   }
 </script>
+</div>
