added NSF MultiNet Award

--- a/_includes/project_list_entry.html
+++ b/_includes/project_list_entry.html
@@ -8,7 +8,14 @@
         <span class="paper-title"><a href="{{ site.baseurl }}{{ project.url }}">{{ project.title }}</a></span><br/>
         <span><b>PI:</b> {% include person_name_link.html key=project.pi %}</span>
 
-        {{project.coinvestigators.length }}
+        {% if project.copi %}
+         <br>
+            <span><b>Co-PI(s):</b> </span>
+            {% for investigator in project.copi %}
+                {% include person_name_link.html key=investigator %}{% if forloop.last %}{% else %},{% endif %}
+           {% endfor %}
+        {% endif %}
+
         {% if project.coinvestigators %}
             <br>
             <span><b>Co-Investigators:</b> </span>
@@ -19,6 +26,4 @@
         <br>
         <span><b>Duration:</b> {{project.time}}</span>
        </p>
-
-
 </div>
