--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -92,8 +92,25 @@ layout: default
 
         <h3>Principal Investigator</h3>
         <span>
+             <ul>
+             <li>
             {% include person_name_link.html key=page.pi %}
+             </li>
+             </ul>
         </span>
+
+             {% if page.copi %}
+        <h3>Co-Principal Investigator(s):</h3>
+        <ul>
+
+            {% for copi in page.copi %}
+                <li>
+                {% include person_name_link.html key=copi %}
+                </li>
+            {% endfor %}
+
+        </ul>
+        {% endif %}
 
      {% if page.coinvestigators %}
         <h3>Co-Investigator(s):</h3>
@@ -122,6 +139,15 @@ layout: default
         <span>{{page.partners}}</span>
         {%endif%}
 
+        {% if page.award %}
+        <h3>Awarded Amount:</h3>
+        <span>{{page.award}}</span>
+        {% endif %}
+
+             {% if page.award %}
+        <h3>Share at Utah:</h3>
+        <span>{{page.award-utah}}</span>
+        {% endif %}
 
         {% if page.updated %}
         <h3>Last Updated</h3>
