--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,37 +1,37 @@
 <div class="navigation">
-    <div class="logo">
-        <img style="height: 100px" src="{{ site.baseurl }}/assets/images/logos/vdl.png" alt="vdl logo">
-    </div>
-    <div class="navigation-buttons">
-	  <ul>
+  <div id="svg" class="logo">
+    <!-- <img style="height: 100px" src="{{ site.baseurl }}/assets/images/logos/vdl.png" alt="vdl logo"> -->
+  </div>
+  <div class="navigation-buttons">
+    <ul>
       {% assign navButtons = "home|team|publications|culture|positions" | split: "|" %}
       {% for nav in navButtons %}
-        {% assign navURL = nav %}
-        {% assign pageURL = page.url %}
-        {% assign pageURLSplit = page.url | split: "/" %}
-        {% if nav == "home" %}
-          {% assign navURL = "" %}
-        {% endif %}
-        
-        {% if pageURLSplit[1] == navURL %}
-          <li class="{{ nav }}-button">
-            <a class="active" href="{{ site.baseurl }}/{{ navURL }}">
-            <span class="nav-text">{{ nav | upcase }}</span></a>
-          </li>
+      {% assign navURL = nav %}
+      {% assign pageURL = page.url %}
+      {% assign pageURLSplit = page.url | split: "/" %}
+      {% if nav == "home" %}
+      {% assign navURL = "" %}
+      {% endif %}
 
-        {% elsif navURL == "" and pageURL == "/" %}
-          <li class="{{ nav }}-button">
-            <a class="active" href="{{ site.baseurl }}/{{ navURL }}">
-            <span class="nav-text">{{ nav | upcase }}</span></a>
-          </li>
-        
-        {% else %}
-          <li class="{{ nav }}-button">
-            <a href="{{ site.baseurl }}/{{ navURL }}">
-            <span class="nav-text">{{ nav | upcase }}</span></a>
-          </li>
-        {% endif %}
+      {% if pageURLSplit[1] == navURL %}
+      <li class="{{ nav }}-button">
+        <a class="active" href="{{ site.baseurl }}/{{ navURL }}">
+          <span class="nav-text">{{ nav | upcase }}</span></a>
+      </li>
+
+      {% elsif navURL == "" and pageURL == "/" %}
+      <li class="{{ nav }}-button">
+        <a class="active" href="{{ site.baseurl }}/{{ navURL }}">
+          <span class="nav-text">{{ nav | upcase }}</span></a>
+      </li>
+
+      {% else %}
+      <li class="{{ nav }}-button">
+        <a href="{{ site.baseurl }}/{{ navURL }}">
+          <span class="nav-text">{{ nav | upcase }}</span></a>
+      </li>
+      {% endif %}
       {% endfor %}
-	  </ul>
-    </div>
+    </ul>
+  </div>
 </div>
