--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -24,6 +24,7 @@
     ]
     {% endcapture %}
 
+    <link rel="stylesheet" href="{{base.url}}/css/vdl_logo_styles.css">
 
     <script>
     var publications = {{ publications }}
@@ -108,6 +109,7 @@
 {% if site.use_analytics == true %}
 {% include google_analytics.html %}
 {% endif %}
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.7.0/d3.min.js"></script>
+<script src="{{base.url}}/scripts/vdl_logo_script.js"></script>
 </body>
 </html>
