--- a/_includes/head_default.html
+++ b/_includes/head_default.html
@@ -8,6 +8,8 @@
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <link rel="stylesheet" href="{{ site.baseurl }}/css/site.css">
 
+<link rel="stylesheet" href="{{base.url}}/css/vdl_logo_styles.css">
+
 <!-- Fav and touch icons -->
 <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/favicon.ico" />
 <link rel="apple-touch-icon" href="{{ site.baseurl }}/favicon.png" />
