Updated animated logo

--- a/css/vdl_logo_styles.css
+++ b/css/vdl_logo_styles.css
@@ -2,6 +2,14 @@
   fill: #fff;
 }
 
+svg {
+  pointer-events: all
+}
+
+g {
+  pointer-events: none
+}
+
 .inner-border {
   fill: none;
   stroke: black;
@@ -31,4 +39,5 @@
 
 .background {
   stroke: white;
+  stroke-width: 5px;
 }
